fix: adjust the height of about-me window on mobile view

--- a/src/components/Layout/About-Me/AboutMe.css
+++ b/src/components/Layout/About-Me/AboutMe.css
@@ -4,14 +4,17 @@
   position: relative;
 }
 .profile {
-  width: 45%;
-
+  width:clamp(150px,20vw,50%);
+  display: relative;
 }
 .about-me .profile-picture {
-  width: 100%;
-  height: 100%;
+  width: clamp(150px,20vw,100%);
+  display: block;
 }
-
+.about-container .content {
+    width: 100%;
+    height: 100%;
+}
 .content .about-name{
   font-size: 30px;
   font-weight: bold;
